# zxemulator

./: .gitignore  CODE_REVIEW.md  LICENSE  README.md  gemini.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
SFML/SFML-2.5.1/doc/html/: ContextSettings_8hpp_source.html  InputSoundFile_8hpp_source.html  Music_8hpp_source.html  RenderTarget_8hpp_source.html  SoundBufferRecorder_8hpp_source.html  SoundBuffer_8hpp_source.html  Sound_8hpp_source.html  VertexBuffer_8hpp_source.html  annotated.html  classsf_1_1AlResource.html  classsf_1_1Context.html  classsf_1_1Drawable.html  classsf_1_1Font.html  classsf_1_1GlResource.html  classsf_1_1InputSoundFile-members.html  classsf_1_1InputSoundFile.html  classsf_1_1Music-members.html  classsf_1_1Music.html  classsf_1_1RenderTarget.html  classsf_1_1RenderTexture.html  classsf_1_1RenderWindow.html  classsf_1_1Sound-members.html  classsf_1_1Sound.html  classsf_1_1SoundBuffer-members.html  classsf_1_1SoundBuffer.html  classsf_1_1SoundBufferRecorder.html  classsf_1_1SoundRecorder.html  classsf_1_1TcpSocket.html  classsf_1_1UdpSocket.html  classsf_1_1VertexBuffer.html  classsf_1_1Window.html  functions_func_g.html  functions_g.html  group__audio.html  group__graphics.html  hierarchy.html  structsf_1_1BlendMode.html  structsf_1_1ContextSettings.html
SFML/SFML-2.5.1/examples/island/: Island.cpp
SFML/SFML-2.5.1/examples/opengl/: OpenGL.cpp
SFML/SFML-2.5.1/examples/sound/: Sound.cpp
SFML/SFML-2.5.1/examples/sound-capture/: SoundCapture.cpp
SFML/SFML-2.5.1/examples/voip/: Server.cpp
SFML/SFML-2.5.1/examples/window/: Window.cpp
SFML/SFML-2.5.1/include/SFML/Audio/: InputSoundFile.hpp  Music.hpp  Sound.hpp  SoundBuffer.hpp  SoundBufferRecorder.hpp  SoundRecorder.hpp  SoundStream.hpp
SFML/SFML-2.5.1/include/SFML/Graphics/: BlendMode.hpp  Font.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  VertexBuffer.hpp
SFML/SFML-2.5.1/include/SFML/Network/: TcpSocket.hpp  UdpSocket.hpp
SFML/SFML-2.5.1/include/SFML/Window/: Context.hpp  ContextSettings.hpp  Window.hpp
SFML/SFML-2.5.1/lib/cmake/SFML/: SFMLConfigDependencies.cmake
cmake_modules/: FindSFML.cmake
resources/: icon.icns
roms/: Elite.tap  Readme.md  Readme.txt  pacman.z80
src/: CMakeCache.txt  CMakeLists.txt  Info.plist.in  Makefile  ZXEmulator  cmake_install.cmake  compile_commands.json  main.cpp
src/exceptions/: MemoryException.h
src/platform/mac/: MacFileOpenHandler.h  MacFileOpenHandler.mm
src/spectrum/: ALUHelpers.cpp  ALUHelpers.h  Audio.cpp  Audio.h  Keyboard.cpp  Keyboard.h  Memory.cpp  Memory.h  Processor.cpp  Processor.h  ProcessorMacros.h  ProcessorState.cpp  ProcessorState.h  ProcessorTypes.h  Processor_Extended.cpp  Processor_Index.cpp  Processor_Ops.cpp  Rom.cpp  Rom.h  SnapshotLoader.cpp  SnapshotLoader.h  Tape.cpp  Tape.h  TapeLoader.cpp  TapeLoader.h
src/spectrum/Opcodes/: ExtendedOpcodes.cpp  ExtendedOpcodes.h  IndexOpcodes.cpp  IndexOpcodes.h  OpCode.cpp  OpCode.h  OpCodeCatalogue.cpp  OpCodeCatalogue.h  OpCodeProvider.cpp  OpCodeProvider.h
src/spectrum/Opcodes/instructions/: ArithmeticOpcodes.cpp  ArithmeticOpcodes.h  BitOpcodes.cpp  BitOpcodes.h  IOOpcodes.cpp  IOOpcodes.h  InterruptOpcodes.cpp  InterruptOpcodes.h  JumpOpcodes.cpp  JumpOpcodes.h  LoadOpcodes.cpp  LoadOpcodes.h  LogicOpcodes.cpp  LogicOpcodes.h  OutOpcodes.cpp  OutOpcodes.h  RotateOpcodes.cpp  RotateOpcodes.h  StackOpcodes.cpp  StackOpcodes.h
src/spectrum/instructions/: ArithmeticInstructions.h  BitInstructions.h  ControlInstructions.h  IOInstructions.h  InterruptsFactory.cpp  InterruptsFactory.h  LoadFactory.cpp  LoadFactory.h  LoadInstructions.h  LogicFactory.cpp  LogicFactory.h  LogicInstructions.h  OpCode.cpp  OpCode.h  OpCodeCatalogue.cpp  OpCodeCatalogue.h  OpCodeFactory.cpp  OpCodeFactory.h
src/spectrum/video/: Screen.cpp  Screen.h  VideoBuffer.cpp  VideoBuffer.h
src/spectrum/video/windows/: WindowsScreen.cpp  WindowsScreen.h
src/tests/: BenchmarkTest.cpp  CMakeLists.txt  Google_Tests_run  InstructionTest.cpp  Makefile  ProcessorTest.cpp  cmake_install.cmake
src/utils/: BaseTypes.h  BinaryFileLoader.cpp  BinaryFileLoader.h  FileDialog.h  Logger.cpp  Logger.h  PeriodTimer.cpp  PeriodTimer.h  RegisterUtils.cpp  RegisterUtils.h  ResourceUtils.h  TZXLoader.cpp  TZXLoader.h  debug.h
